--- a/Clock1/style.css
+++ b/Clock1/style.css
@@ -8,7 +8,7 @@ body{
     justify-content:center;
     align-items:center;
     background: rgba(255,255,255);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular';
 }
 .clock{
     text-align: center;
