--- a/Generador de claves 2/style.css
+++ b/Generador de claves 2/style.css
@@ -23,7 +23,7 @@
     border-radius:6px;
     box-shadow: 1px 1px 4px rgba(0,0,0,0.1);
   }
-  #contraseña {
+  #password {
     background:#ddd;
     min-height:30px;
     padding:5px 13px;
@@ -33,8 +33,34 @@
     margin-bottom:20px;
     width: 100%;
   }
- 
-  #reset {
+  #password:focus {
+    outline:none;
+    border:1px solid blue;
+  }
+  .invalid{
+    border: solid 1px red;
+    box-shadow: 0 0 10px red;
+  }
+  .error {
+    display: block;
+    text-align:left;
+    font-size: 10px;
+    color:rgb(247, 12, 12);
+    padding-bottom: 15px;
+    
+  }
+  .claveGenerada{
+    background:#ddd;
+    min-height:30px;
+    padding:5px 13px;
+    margin-top:15px;
+    border: 1px solid #ddd;
+    border-radius:4px;
+    margin-bottom:20px;
+    width: 100%;
+  }
+       
+  #crear {
     display: inline-block;
     color:#fff;
     background:#2196f3;
